Fri Jun 17 12:48:31 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Basic_Types.h:

          Removed the 'L' from the version of
          ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII targeted at MinGW
          platforms. That platform apparently doesn't support that
          part of the C print format spec.

Thu Jun 16 13:31:16 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Basic_Types.h:

          Changed the logic of what ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII
          expands to in order to eliminate warnings on FC6 and FC8.

Wed Jun 15 13:10:40 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Basic_Types.h:

          Added a special version of ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII
          for MinGW32, which seems to diverge from other platforms in how
          it conforms to the printf print format.

Fri Jun 10 19:05:30 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * ace/Basic_Types.h:

          Added #define of ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII
          to make generation of a long double literal by the TAO IDL
          compiler more portable.

Fri Jun 10 12:58:49 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * ChangeLog:
          Fuzz. Removed tab.

Thu Jun  9 01:16:23 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/RB_Tree.cpp: Fixed overly long ACE_TRACE string literals
          that were split across lines.  Thanks to Espen Harlinn <espen at
          harlinn dot no> for reporting this.

Wed Jun  8 21:05:56 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * bin/fuzz.pl:

          Switch from cvs to svn for the -m option that checks only modified
          files.  We haven't used cvs for some time now.

Tue Jun  7 20:45:56 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * ace/CDR_Base.h:

          The inline function needs to be static to match the semantics of
          a struct constructor when the environment has native long