@@ -835,12 +835,16 @@ ACE_END_VERSIONED_NAMESPACE_DECL
 #if !defined (ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII)
 #  if defined (ACE_CDR_IMPLEMENT_WITH_NATIVE_DOUBLE) && \
               (ACE_CDR_IMPLEMENT_WITH_NATIVE_DOUBLE == 1)
-#    define ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII "%#24.16G"
+#    if defined (NONNATIVE_LONGDOUBLE)
+#      define ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII "%#24.16G"
+#    else
+#      define ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII "#24.16LG"
+#    endif /* defined (NONNATIVE_LONGDOUBLE) */
 #  else
 #    if defined (__MINGW32__)
-#       define ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII "%24.16G"
+#      define ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII "%24.16G"
 #    else
-#       define ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII "%#24.16LGL"
+#      define ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII "%#24.16LGL"
 #    endif /* __MINGW32__ */
 #  endif /* ACE_CDR_IMPLEMENT_WITH_NATIVE_DOUBLE */
 #endif /* ACE_LONG_DOUBLE_FORMAT_SPECIFIER_ASCII */
